# hdvmerge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: algorithm.md  formats.md  hdv-internals.md
src/hdvmerge/: __init__.py  aux.py  auxpack.py  build.py  cli.py  gop.py  jsonout.py  model.py  plan.py  probe.py  psi.py  report.py  scan.py  ts.py  verify.py
tests/: __init__.py  fixtures.py  test_e2e.py  test_jsonout.py  test_primitives.py
